--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,43 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  font-family: Arial;
+  font-weight: 400;
+  line-height: 35px;
+  font-size: 15px;
+  overflow-x: hidden;
+  min-height: 100vhg;
+  text-align: left;
+  background-color: #dadada;
+  color: #333;
+}
+
+p {
+  text-align: justify;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+input[type="radio"] {
+  margin: 0 15px 0 15px;
+  position: relative;
+  top: 2px;
+}
+
+input[type="checkbox"] {
+  margin: 0 15px 0 15px;
+  position: relative;
+  top: 2px;
+}
+
+.is-todo-completed {
+  color: #666;
+  text-decoration: line-through;
 }
